# telo

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: automaton.rs  lib.rs  monitor.rs  predicate.rs
src/automaton/: dot.rs
src/automaton/alternating/: dot.rs
