[package]
name = "telo"
version = "0.1.0"
edition = "2021"
description = "Temporal specifications in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biodivine-lib-bdd = "0.4"
bitvec = "1.0"
dot = "0.1"
itertools = "0.10"
maplit = "1.0"
